Fixed alignment in edit-profile.html
Static components were misaligned.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,7 @@
+.form-control-static {
+	padding-left:0.7em;
+}
+
 .reply {
 	color:white;
 }
